--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     env:
-      ResourceGroupName: events_hub-rg
+      ResourceGroupName: event_hub-rg
       ResourceGroupLocation: "eastus"
     steps:
     - uses: actions/checkout@master
