--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ jobs:
     env:
       ResourceGroupName: event_hub-rg
       ResourceGroupLocation: "eastus"
+      check: ""
     steps:
     - uses: actions/checkout@master
     - uses: azure/login@v1
@@ -23,22 +24,22 @@ jobs:
             az group create --name ${{ env.ResourceGroupName }} --location ${{ env.ResourceGroupLocation }}
             echo "Azure resource group created"
           fi
-    - name: Test1
-      id: Test1
-      run: |
-        check=$(az resource list --resource-group  'event_hub-rg' --query "[?name=='TestVm-DataDisk0'] | length(@)")
-        echo "$check"
     - uses: azure/arm-deploy@v1
     
-#      with:
-#        resourceGroupName: ${{ env.ResourceGroupName }}
-#        template: azuredeploy.json
-#        parameters: azuredeploy.parameters.json
+      with:
+        inlineScript: |
+          #!/bin/powershell
+          $planCheck = az resource list --resource-group  'event_hub-rg' --query "[?name=='TestVm-DataDisk0'] " | ConvertFrom-Json
+          $planExists = $planCheck.Length -gt 0
+          $check = $planExists 
+          echo "$check"
+          
+      
+        if: startsWith($check, "False")
+        run: |
         
-##    - uses: azure/arm-deploy@v1
-#      with:
-#        resourceGroupName: ${{ env.ResourceGroupName }}
-#        template: apache2-on-ubuntu-vm/azuredeploy.json
-#        parameters: apache2-on-ubuntu-vm/azuredeploy.parameters.json  
-
- 
+          resourceGroupName: ${{ env.ResourceGroupName }}
+          template: azuredeploy.json
+          parameters: azuredeploy.parameters.json
+      
+   
